<resources>
    <string name="app_name">calculadoraDataBinding</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="resultados">Resultados</string>
    <string name="c">C</string>
    <string name="parentesesEsquerdo">(</string>
    <string name="parentesesDireito">)</string>
    <string name="exp">^</string>
    <string name="divide">/</string>
    <string name="multiplica">*</string>
    <string name="sub">-</string>
    <string name="soma">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
    <string name="undo"><![CDATA[<]]></string>
</resources>